# dj-api

./: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
app/: main.py
